# iximiuz-labs-challenges

./: README.md
easy/build_and_publish_container_image_with_docker/: README.md  build_and_publish_container_image_with_docker.sh
easy/containerd_namespaces/: README.md  containerd_namespaces.sh
easy/copy_container_image_from_one_repository_to_another_with_docker/: README.md  copy_container_image_from_one_repository_to_another_with_docker.sh
easy/copy_files_to_from_container/: README.md  copy_files_to_from_container.sh  nginx.conf
easy/storage_simple_mount/: README.md  (+1 more)
hard/dockerize_python_application/app/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
hard/dockerize_python_application/app/app/: main.py
hard/dockerize_python_application/app/app/api/: routes_04d4b3890d05569ebba7.py  routes_07547a881b464fccea3e.py  routes_11b484d03207849c6884.py  routes_1666d93da5e901df1131.py  routes_3c0dc5d92511d8537876.py  routes_3cba9b75aa916b27862c.py  routes_72bcd39c4e55a389b8c3.py  routes_780c7dab0c9eb8bb3db8.py  routes_a97fd16ea482ae58d903.py  routes_ae5d80dd3f409850afc6.py  routes_af5040dceb4d78093074.py  routes_c30691d5d637bbcd723c.py  routes_d1092bbc704b648804c3.py  routes_d780d78ff6a314c1334a.py  routes_de4532d5c3bcc4d442f6.py  routes_f86e32aeed920af2f94b.py  routes_f923c3351d36a479b5db.py  routes_fbd0fdabcab48c5ff4c9.py  routes_ff277e4970edece81017.py
hard/dockerize_python_application/app/app/static/css/: styles.css
hard/dockerize_python_application/app/app/templates/: index.html
hard/dockerize_python_application/app/tests/: test_main.py
(+263 files in other folders)
